--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <section></section>
+    </main>
     <footer></footer>
 </body>
 </html>
